--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -1,13 +1,20 @@
 <md-toolbar class="md-padding header" layout="row" layout-align="start center">
-    <h5 ng-click="$ctrl.$state.go('client.customersCheckIn')">
+    <h4 ng-click="$ctrl.$state.go('client.customersCheckIn')">
         A+ Pet and Grooming
-    </h5>
+    </h4>
     <p>
         <small> | powered by Beastie </small>
     </p>
-
+    <div class="">
+        <md-icon md-svg-src="beastie"></md-icon>
+    </div>
     <div class="" flex></div>
-    <user-auth-logout style="icon"></user-auth-logout>
+    <div class="">
+        <md-icon
+            md-svg-src="logout-variant"
+            ng-click="$ctrl.$state.go('client.customersCheckIn')">
+        </md-icon>
+    </div>
 </md-toolbar>
 <div ui-view layout="column" flex>
     client content
