--- a/client/src/core/newCustomerQuick.dialog.html
+++ b/client/src/core/newCustomerQuick.dialog.html
@@ -12,7 +12,13 @@
                 <md-subheader class="md-no-sticky">Customer</md-subheader>
                 <md-input-container class="md-block">
                     <label>phone</label>
-                    <input type="text" ng-model="$ctrl.customer.phone" aria-label="customer-phone">
+                    <input type="text"
+                        ng-model="$ctrl.customer.phone"
+                        aria-label="customer-phone"
+                        ui-mask="(999) 999-9999"
+                        allowInvalidValue="true"
+                        ui-options="{clearOnBlur:false}"
+                        >
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>firstname</label>
