fix touch issue

--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -10,6 +10,7 @@
     </div>
     <div class="" flex></div>
     <div class="">
+        <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
         <md-icon
             md-svg-src="logout-variant"
             ng-click="$ctrl.$state.go('client.customersCheckIn')">
