--- a/client/src/core/newCustomerQuick.dialog.html
+++ b/client/src/core/newCustomerQuick.dialog.html
@@ -1,6 +1,14 @@
 <div id="new-customer-quick-dialog" class="" layout="column" flex layout-fill>
     <md-toolbar class="md-primary md-hue-2 md-padding" layout="row" layout-align="start center">
-        Quick Create a New Customer
+        <div class="">
+            Quick Create a New Customer
+        </div>
+        <div flex>
+
+        </div>
+        <div class="">
+            <md-icon ng-click="$ctrl.cancel()" md-svg-src="close"></md-icon>
+        </div>
     </md-toolbar>
     <md-content layout="column" flex class="md-padding">
         <form layout="column" flex>
