--- a/client/src/core/quickStart.dialog.html
+++ b/client/src/core/quickStart.dialog.html
@@ -1,8 +1,9 @@
 <form>
 <div id="quick-start-dialog" class="" layout="column" flex layout-fill>
-    <md-toolbar class="md-primary md-hue-2 md-padding" layout="row" layout-align="start center">
-        <div class="">
-            Enter Customer's Phone Number
+
+    <md-toolbar class="header md-primary md-hue-2 md-padding" layout="row" layout-align="start center">
+        <div class="" ng-click="touchMode = !touchMode" ng-init="touchMode = true">
+            Customer's Phone Number
         </div>
         <div flex>
 
@@ -11,32 +12,35 @@
             <md-icon ng-click="$ctrl.cancel()" md-svg-src="close"></md-icon>
         </div>
     </md-toolbar>
-    <md-content layout="column" flex class="md-padding" layout-align="center center">
-        <md-input-container class="md-block">
-            <!-- <label>phone</label> -->
-            <input
-                name="phone"
-                type="text"
-                ng-model="$ctrl.phone"
-                ui-mask="(999) 999-9999"
-                allowInvalidValue="true"
-                ui-options="{clearOnBlur:false}"
-                aria-label="customer-phone">
-        </md-input-container>
-    </md-content>
-    <md-divider></md-divider>
-    <div class="" layout="row" flex="none" class="md-padding">
-        <md-button ng-click="$ctrl.reset()" class="md-warn" aria-label="cancel">
-            <!-- <md-icon md-svg-src="delete"></md-icon> -->
-            <span>Reset</span>
-        </md-button>
-        <div flex layout="row" layout-align="center center">
-            {{$ctrl.validateMessage}}
+    <div layout="column" flex ng-show="touchMode">
+        <keypad limit=10 type="tel" on-update="$ctrl.go(inputNumbers)"></keypad>
+    </div>
+    <div layout="column" flex ng-show="!touchMode">
+        <md-content  layout="column" flex class="md-padding" layout-align="center center">
+            <md-input-container class="md-block">
+                <input
+                    name="phone"
+                    type="text"
+                    ng-model="$ctrl.phone"
+                    ui-mask="(999) 999-9999"
+                    allowInvalidValue="true"
+                    ui-options="{clearOnBlur:false}"
+                    aria-label="customer-phone">
+            </md-input-container>
+        </md-content>
+        <md-divider></md-divider>
+        <div class="" layout="row" flex="none" class="md-padding">
+            <md-button ng-click="$ctrl.reset()" class="md-warn" aria-label="cancel">
+                <span>Reset</span>
+            </md-button>
+            <div flex layout="row" layout-align="center center">
+                {{$ctrl.validateMessage}}
+            </div>
+            <md-button ng-click="$ctrl.go()" type="submit" class="md-primary md-raised" ng-disabled="!$ctrl.validate()" aria-label="create">
+                <md-icon md-svg-src="arrow-right-bold-hexagon-outline"></md-icon>
+                <span>Go</span>
+            </md-button>
         </div>
-        <md-button ng-click="$ctrl.go()" type="submit" class="md-primary md-raised" ng-disabled="!$ctrl.validate()" aria-label="create">
-            <md-icon md-svg-src="arrow-right-bold-hexagon-outline"></md-icon>
-            <span>Go</span>
-        </md-button>
     </div>
 </div>
 
