--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -5,7 +5,7 @@
         <md-icon ng-show="!toggleIcons" md-svg-src="format-list-bulleted" ng-click="$ctrl.openInhouseOrdersDialog()"></md-icon>
         <!-- <div flex></div> -->
         <md-icon ng-show="toggleIcons" md-svg-src="account-multiple" ng-click="$ctrl.go('core.customers.list')"></md-icon>
-        <md-icon ng-show="toggleIcons" md-svg-src="paw" ng-click="$ctrl.go('core.pets.list')"></md-icon>
+        <!-- <md-icon ng-show="toggleIcons" md-svg-src="paw" ng-click="$ctrl.go('core.pets.list')"></md-icon> -->
         <md-icon ng-show="toggleIcons" md-svg-src="format-list-bulleted-type" ng-click="$ctrl.go('core.listItems')"></md-icon>
         <md-icon ng-show="toggleIcons" md-svg-src="settings" ng-click="$ctrl.go('core.settings')"></md-icon>
         <md-icon ng-show="toggleIcons" md-svg-src="account-settings-variant" ng-click="$ctrl.go('core.users')"></md-icon>
