--- a/client/src/core/listItems/listItemsServices/listItemsServices.html
+++ b/client/src/core/listItems/listItemsServices/listItemsServices.html
@@ -39,31 +39,33 @@
                 flex="none">
                 <div layout="column" flex>
                     <md-input-container class="md-block">
-                        <label>name</label>
+                        <label>Name</label>
                         <input type="text" ng-model="item.name" aria-label="{{item.name}}">
                     </md-input-container>
                     <md-input-container class="md-block">
-                        <label>description</label>
+                        <label>Description</label>
                         <textarea ng-model="item.description" md-maxlength="150" rows="3" md-select-on-focus></textarea>
                     </md-input-container>
                 </div>
                 <div layout="column" flex>
                     <md-input-container class="md-block">
-                        <label>zhName</label>
+                        <label>中文名稱</label>
                         <input type="text" ng-model="item.zhName" aria-label="{{item.zhName}}">
                     </md-input-container>
                     <md-input-container class="md-block">
-                        <label>zh description</label>
+                        <label>中文敘述</label>
                         <textarea ng-model="item.zhDescription" md-maxlength="150" rows="3" md-select-on-focus></textarea>
                     </md-input-container>
                 </div>
                 <div layout="column" flex="20" layout-align="start start">
-                    <div class="">
-                        <md-input-container class="md-block">
-                            <label>price</label>
-                            <input type="number" step="0.01" ng-model="item.price" aria-label="{{item.price}}">
-                        </md-input-container>
-                    </div>
+                    <md-input-container class="md-block">
+                        <label>Price</label>
+                        <input type="number" step="0.01" ng-model="item.price" aria-label="{{item.price}}">
+                    </md-input-container>
+                    <md-input-container class="md-block">
+                        <label>Esitimate Hours</label>
+                        <input type="number" step="0.5" ng-model="item.estimatedHours" aria-label="{{item.estimatedHours}}">
+                    </md-input-container>
                 </div>
                 <div layout="column" flex="10" layout-align="start center">
                     <md-switch ng-model="item.isActivated" aria-label="isActivated" ng-true-value="true" ng-false-value="false">
