--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -1,6 +1,6 @@
 <div layout="row" flex id="core" layout-fill>
     <div layout="column" layout-align="start center" class="sidenav" md-colors="{background:'primary-700'}">
-        <md-icon ng-show="!toggleIcons" md-svg-src="calendar-plus" ng-click="$ctrl.newOrder()"></md-icon>
+        <md-icon ng-show="!toggleIcons" md-svg-src="calendar-plus" ng-click="$ctrl.startup()"></md-icon>
         <md-icon ng-show="!toggleIcons" md-svg-src="book-open-page-variant" ng-click="$ctrl.go('core.orders.list')"></md-icon>
         <md-icon ng-show="!toggleIcons" md-svg-src="format-list-bulleted" ng-click="$ctrl.openInhouseOrdersDialog()"></md-icon>
         <!-- <div flex></div> -->
@@ -11,7 +11,7 @@
         <md-icon ng-show="toggleIcons" md-svg-src="account-settings-variant" ng-click="$ctrl.go('core.users')"></md-icon>
         <!-- <md-icon ng-show="toggleIcons" md-svg-src="printer" ng-click="$ctrl.go('core.printer')"></md-icon> -->
         <div flex></div>
-        <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
+        <md-icon md-svg-nsrc="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
         <md-icon md-svg-src="swap-horizontal" ng-click="toggleIcons = !toggleIcons"></md-icon>
         <!-- <md-icon md-svg-src="printer-alert">printer alert</md-icon> -->
         <!-- <md-icon md-svg-src="translate" ng-click="$ctrl.toggleLanguage()"></md-icon> -->
