--- a/client/src/client/petsForm/petsForm.html
+++ b/client/src/client/petsForm/petsForm.html
@@ -119,7 +119,11 @@
                             <md-input-container flex="50">
                                 <label>Good For</label>
                                 <md-select ng-model="item.effectiveDuration" aria-label="{{name}}-vaccine effective duration"
+                                    ng-disabled="!item.issuedAt"
                                     ng-change="$ctrl.setDaysBeforeExpire(item, $parent.$index)">
+                                    <md-option value="">
+
+                                    </md-option>
                                     <md-option ng-repeat="(value, display) in {1: '1 Year', 3: '3 Years'}" ng-value="value">
                                         {{display}}
                                     </md-option>
@@ -185,15 +189,11 @@
                 </md-content>
             </md-tab>
 
-            <md-tab label="Gallery">
+            <!-- <md-tab label="Gallery">
                 <md-content class="md-padding">
                     <h2 class="md-headline">Photos go here.</h2>
                 </md-content>
-                <!--<div layout="column" flex>-->
-                <!--    <md-button ng-click="$ctrl.takeSnapshot()">take a picture</md-button>-->
-                <!--    <img ng-src="{{$ctrl.pet.picture}}" style="width:300px"/>-->
-                <!--</div>-->
-            </md-tab>
+            </md-tab> -->
 
         </md-tabs>
         </div>
