--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -1,5 +1,5 @@
 <md-toolbar class="md-padding header" layout="row" layout-align="start center">
-    <h4 ng-click="$ctrl.$state.go('client.customersCheckIn')">
+    <h4>
         A+ Pet and Grooming
     </h4>
     <p>
@@ -11,10 +11,11 @@
     <div class="" flex></div>
     <div class="">
         <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
-        <md-icon
+        <!-- <md-icon
             md-svg-src="logout-variant"
             ng-click="$ctrl.$state.go('client.customersCheckIn')">
-        </md-icon>
+        </md-icon> -->
+        <user-auth-logout style="icon"></user-auth-logout>
     </div>
 </md-toolbar>
 <div ui-view layout="column" flex>
