add isRush to inhouseorders

--- a/client/src/core/inhouseOrders/inhouseOrders.html
+++ b/client/src/core/inhouseOrders/inhouseOrders.html
@@ -1,4 +1,4 @@
-<div layout="column" id="inhouse-orders" layout-align="start center">
+<!-- <div layout="column" id="inhouse-orders" layout-align="start center">
     <div layout="row" class="header" layout-align="center center">
         <md-button ng-click="$ctrl.reset()" class="md-warn">reset</md-button>
         <div class="flex" layout="row" layout-align="center center">
@@ -41,4 +41,4 @@
         </div>
     </md-content>
 </div>
-<canvas id="inhouse-orders-canvas" class="hide"></canvas>
+<canvas id="inhouse-orders-canvas" class="hide"></canvas> -->
