--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -11,7 +11,7 @@
         <md-icon ng-show="toggleIcons" md-svg-src="account-settings-variant" ng-click="$ctrl.go('core.users')"></md-icon>
         <!-- <md-icon ng-show="toggleIcons" md-svg-src="printer" ng-click="$ctrl.go('core.printer')"></md-icon> -->
         <div flex></div>
-        <md-icon md-svg-nsrc="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
+        <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
         <md-icon md-svg-src="swap-horizontal" ng-click="toggleIcons = !toggleIcons"></md-icon>
         <!-- <md-icon md-svg-src="printer-alert">printer alert</md-icon> -->
         <!-- <md-icon md-svg-src="translate" ng-click="$ctrl.toggleLanguage()"></md-icon> -->
